--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -2,10 +2,10 @@
   align-items: flex-end;
   display: flex;
   margin: 0 auto;
-  max-width: var(--size-max-width);
-  min-height: 200px;
   padding: 0 0 var(--size-gutter);
   position: relative;
+  text-align: center;
+  justify-content: center;
 }
 
 .image {
@@ -20,11 +20,16 @@
 
 .details {
   background: var(--background);
-  left: 0;
-  max-width: 40rem;
+  
   width: 85%;
   padding: var(--space-2xl) var(--size-gutter) 0;
-  position: absolute;
+  position: relative;
+
+  align-items: flex-end;
+  margin: 0 auto;
+  padding: 2px;
+  position: relative;
+  text-align: center;
 }
 
 .title {
@@ -41,14 +46,6 @@
   margin: 0;
 }
 
-@media (min-width: 768px) {
-
-  .details {
-    max-width: 44rem;
-    padding: var(--space-3xl) var(--size-gutter) 0;
-  }
-}
-
 @media (min-width: 1024px) {
   .image {
     margin-left: auto;
@@ -57,6 +54,6 @@
 
   .details {
     left: var(--size-gutter);
-    padding: var(--space-3xl) var(--size-gutter) 0 0;
+   
   }
 }
