nohelps integrations complete

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @font-face {
   font-family: 'Inter var';
   font-weight: 100 900;
@@ -35,6 +40,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
 }
+
 
 img {
   width: 100%;
