--- a/src/components/variables.css
+++ b/src/components/variables.css
@@ -1,14 +1,22 @@
 :root {
+  /* primitives */
+  /* font-family */
   --font-sans: 'Inter var', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
   --font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
     'Courier New', monospace;
   --font-serif: 'Times New Roman', Times, serif;
+
+  /* palette */
   --white: #fff;
   --black: #000;
   --black-fade-5: rgba(0, 0, 0, 0.05);
+
+  /* radii */
   --radius-sm: 4px;
+
+  /* spacing */
   --space-sm: 4px;
   --space-md: 8px;
   --space-lg: 16px;
@@ -17,16 +25,22 @@
   --space-3xl: 48px;
   --space-4x1: 72px;
   --space-5x1: 96px;
+
+  /* line-height */
   --solid: 1;
   --dense: 1.25;
   --default: 1.5;
   --loose: 1.75;
+
+  /* font-weight */
   --body: 400;
   --medium: 500;
   --semibold: 600;
   --bold: 700;
   --extrabold: 800;
   --heavy: 900;
+
+  /* font-size */
   --text-xs: 12px;
   --text-sm: 14px;
   --text-md: 16px;
@@ -37,17 +51,31 @@
   --text-4xl: 48px;
   --text-5xl: 64px;
   --text-6xl: 76px;
+
+  /* tokens */
+  /* colors */
   --primary: #4a90e2;
   --background: var(--white);
-  --background-dark: var(--black);
+
+
   --primary-hover: #fc1010;
   --background-inverse: var(--white);
+
+
+
   --border: var(--black-fade-5);
+
+  /* text */
+  /* color */
   --text-color: var(--black);
+  /* size */
   --text-lead: var(--text-lg);
   --text-prose: var(--text-md);
   --text-title: var(--text-3xl);
+  /* tracking */
   --text-prose-tracking: -0.011em;
+
+  /* size */
   --size-gutter: var(--space-2xl);
   --size-logo-width: var(--space-5xl);
   --size-logo: var(--space-2xl);
