--- a/src/components/header/navigation.module.css
+++ b/src/components/header/navigation.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   justify-content: space-between;
+  max-width: var(--size-max-width);
   align-items: center;
   margin: 0 auto;
 }
@@ -10,6 +11,7 @@
   list-style: none;
   margin: 0;
   gap: var(--space-xl);
+  padding-right:30px;
 }
 
 .navigationItem {
@@ -26,7 +28,7 @@
 
 .navigationItem a:hover {
   border-bottom-color: var(--primary);
-  color: white;
+  color: var(--primary);
 }
 
 .logoLink {
@@ -36,24 +38,6 @@
   flex-direction: row;
   flex-shrink: 0;
   gap: var(--space-md);
-}
-.container {
-  border-top: 1px solid var(--border);
-  font-size: var(--text-sm);
-  margin-top: var(--space-2xl);
-  padding: var(--space-2xl) 0;
-  text-align: right;
-}
-
-.navitems {
-  border-bottom: 1.5px solid transparent;
-  font-weight: var(--medium);
-}
-
-.navitems:hover {
-  color: var(--white) !important;
-  background-color: var(--primary-hover) !important;
-  background: var(--primary-hover) !important;
 }
 
 @media (max-width: 767px) {
