--- a/src/components/all.scss
+++ b/src/components/all.scss
@@ -792,7 +792,8 @@ h1 {
 
 footer.footer {
   padding: 2rem 0rem 0rem;
-  background-color: transparent; }
+  background-color: transparent;
+}
 
 .logo {
   font-size: 1.5rem;
